# stockelper-llm

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  FUNCTIONAL_SPECIFICATION.md  FUNCTION_DEFINITION.md  README.md  cloud.docker-compose.yml  docker-compose.yml  env.example  frontend-requirements.txt  init-multiple-db.sh  local.docker-compose.yml  pyproject.toml  requirements.txt
docs/: API_Architecture_Analysis.md  API_KIS-OpenAPI.md  Function_Definition.md  Functional_Specification.md  Langgraph_Structure.md  Multi-Agent-System.md
legacy/: cloud.docker-compose.yml  init-multiple-db.sh
legacy/src/: db_urls.py  get_access_token.py  langchain_compat.py
legacy/src/multi_agent/: __init__.py  utils.py
legacy/src/routers/: models.py  stock.py
legacy/tests/: conftest.py  test_json_safety.py  test_kis_master_parser.py  test_langchain_compat_stream_tokens.py
scripts/: healthcheck_integrations.py
src/: db_urls.py  get_access_token.py  json_safety.py  langchain_compat.py  main.py  run.py  upload_industy.py  upload_user.py
src/frontend/: requirements.txt  streamlit_app.py  streamlit_app2.py  streamlit_app3.py
src/multi_agent/: __init__.py  utils.py
src/multi_agent/base/: analysis_agent.py
src/multi_agent/fundamental_analysis_agent/: __init__.py
src/multi_agent/investment_strategy_agent/: __init__.py
src/multi_agent/market_analysis_agent/: __init__.py
src/multi_agent/portfolio_analysis_agent/: __init__.py  prompt.py
src/multi_agent/supervisor_agent/: agent.py  prompt.py
src/multi_agent/technical_analysis_agent/: __init__.py  prompt.py
src/portfolio_multi_agent/: builder.py  state.py
src/portfolio_multi_agent/nodes/: __init__.py  generate_views.py  sell_decision.py
src/routers/: stock.py
src/stockelper_llm/: __init__.py  multi_agent.py  webapp.py
src/stockelper_llm/agents/: __init__.py  backtesting_request_agent.py  portfolio_request_agent.py  progress_middleware.py  specialists.py  supervisor.py  tool_error_middleware.py
src/stockelper_llm/core/: __init__.py  (+3 more)
tests/: conftest.py  test_db_urls.py  test_json_safety.py  test_kis_master_parser.py  test_langchain_compat_stream_tokens.py  test_portfolio_count_extraction.py  test_portfolio_request_agent_params.py  test_supervisor_stock_listing_fallback.py
(+30 files in other folders)
